2006-01-20 00:30  hjanuschka

	* ChangeLog, bartlby.cfg, include/bartlby.h, src/Makefile,
	  src/bartlby.c, src/downtime.c, src/sched.c, src/shm.c,
	  src/libs/mysql.c: introducing downtime's

2006-01-16 21:51  hjanuschka

	* include/bartlby.h, src/check.c, src/perf.c: performance stuff
	  moved to perf.c timeing information on perf handler

2006-01-10 23:37  hjanuschka

	* ChangeLog, bartlby.cfg, include/bartlby.h, src/global.c,
	  src/trigger.c: some changes  trigger msg comes out of cfgfile
	  with some $VAR macros

2006-01-10 01:00  hjanuschka

	* Makefile, src/Makefile, src/client/Makefile, src/libs/Makefile:
	  make install fixes

2006-01-10 00:53  hjanuschka

	* bartlby.cfg, include/bartlby.h, src/bartlby.c, src/check.c,
	  src/sched.c: minor changes

2006-01-09 00:20  hjanuschka

	* Makefile, bartlby.cfg, mysql.shema, src/Makefile,
	  src/client/agent.c: install target

2006-01-08 17:39  hjanuschka

	* Makefile, src/Makefile, src/client/Makefile, src/libs/Makefile:
	  make install

2006-01-08 17:17  hjanuschka

	* ChangeLog, bartlby.cfg, mysql.shema, src/bartlby.c, src/check.c,
	  src/client/agent.c, src/libs/mysql.c: mysql shema^

2005-12-31 01:29  hjanuschka

	* bartlby.cfg, perf/bartlby_load, src/check.c, src/client/agent.c:
	  some more perf fixes during high load test

2005-12-30 21:19  hjanuschka

	* bartlby.cfg, include/bartlby.h: version bump 0.1.2a (Dynameis)

2005-12-29 21:05  hjanuschka

	* ChangeLog, bartlby.cfg, include/bartlby.h, src/Makefile,
	  src/perf.c, src/sched.c: core statistic (should be used in debug
	  mode only produces a biiiig file)

2005-12-28 22:40  hjanuschka

	* ChangeLog, bartlby.cfg: inline documentation of each variable in
	  config file

2005-12-27 23:00  hjanuschka

	* bartlby.cfg, perf/bartlby_load, src/check.c: [no log message]

2005-12-26 00:01  hjanuschka

	* bartlby.cfg, perf/bartlby_load, src/check.c, src/client/agent.c:
	  stress testing with RRD perf fixes

2005-12-25 13:55  hjanuschka
