@@ -14,11 +14,11 @@ pidfile_dir=/var/run/
 sched_round_pause=1
 
 
-trigger_msg=State Change ($READABLE_STATE)\\\\\\\\\\\\\\\\n*********** $PROGNAME $VERSION ********************\\\\\\\\\\\\\\\\n[  Server: $SERVER, Service: $SERVICE, State: $READABLE_STATE]\\\\\\\\\\\\\\\\n$MESSAGE
+trigger_msg=State Change ($READABLE_STATE)\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\n*********** $PROGNAME $VERSION ********************\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\n[  Server: $SERVER, Service: $SERVICE, State: $READABLE_STATE]\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\n$MESSAGE
 
 mysql_host=localhost
-mysql_user=root
-mysql_pw=fuck7me2
+mysql_user=bartlby
+mysql_pw=pass
 mysql_db=poseidon
 
 
